Done job creation UI

--- a/django-server/climate_commander/jobs/static/jobs/css/dashboard.css
+++ b/django-server/climate_commander/jobs/static/jobs/css/dashboard.css
@@ -103,3 +103,23 @@ body {
   display: inline-block;
   border-radius: 50%;
 }
+
+.bar {
+  fill: steelblue;
+}
+
+.bar:hover {
+  fill: brown;
+}
+
+.axis {
+  font: 10px sans-serif;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  stroke-width: 2px;
+  shape-rendering: crispEdges;
+}
