--- a/django-server/climate_commander/jobs/templates/jobs/base.html
+++ b/django-server/climate_commander/jobs/templates/jobs/base.html
@@ -93,7 +93,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write("<script src=\"{% static 'jobs/js/jquery.min.js' %}\"><\/script>")</script>
     <script src="{% static 'jobs/js/bootstrap.min.js' %}"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="{% static 'jobs/js/jobs.js' %}"></script>
+    {% block js %}
+    {% endblock %}
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{% static 'jobs/js/ie10-viewport-bug-workaround.js' %}"></script>
   </body>
