--- a/django-server/climate_commander/jobs/templates/jobs/create.html
+++ b/django-server/climate_commander/jobs/templates/jobs/create.html
@@ -4,9 +4,11 @@
 <li><a href="/">Overview</a></li>
 <li class="active"><a href="/create">Create Job<span class="sr-only">(current)</span></a></li>
 <li><a href="/run">Run Job</a></li>
-<li><a href="#">Export</a></li>
 {% endblock %}
 {% block content %}
+
+{% if error_message %}<h3>Job Creation Failed!</h3>
+{{error_message}}{% endif %}
 
 <form action="" method="post">
     {% csrf_token %}
@@ -30,8 +32,6 @@
         <label for="command">Commands to start</label>
         <textarea id="command" class="form-control" name="command" value="{{ command }}" rows="5" required="True"></textarea>
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-{% if error_message %}{{error_message}}{% endif %}
-
 {% endblock %}
