--- a/django-server/climate_commander/jobs/templates/jobs/create.html
+++ b/django-server/climate_commander/jobs/templates/jobs/create.html
@@ -29,6 +29,14 @@
         </select>
     </div>
     <div class="form-group">
+        <label for="result_file">Name of Result File (ex: pvals.yml)</label>
+        <input id="result_file" class="form-control" type="text" name="result_file" value="{{ result_file }}" required="True">
+    </div>
+    <div class="form-group">
+        <label for="result_directory">Path to Result Directory (ex: /shares/gcp/outputs/tmp)</label>
+        <input id="result_directory" class="form-control" type="text" name="result_directory" value="{{ result_directory }}" required="True">
+    </div>
+    <div class="form-group">
         <label for="command">Commands to start</label>
         <textarea id="command" class="form-control" name="command" value="{{ command }}" rows="5" required="True"></textarea>
     </div>
