start fixing front end

--- a/django-server/climate_commander/jobs/templates/jobs/index.html
+++ b/django-server/climate_commander/jobs/templates/jobs/index.html
@@ -1,5 +1,6 @@
 {% extends "jobs/base.html" %}
 {% block title %}Overview{% endblock %}
+{% block message %}{{message}}{% endblock %}
 {% block sidebar %}
 <li class="active"><a href="/">Overview of Jobs Running <span class="sr-only">(current)</span></a></li>
 <li><a href="/create">Create Job</a></li>
